[gd_scene load_steps=12 format=3 uid="uid://citbkd0mqp0rb"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_1fo1j"]
[ext_resource type="Texture2D" uid="uid://dmhn4ywagh8uo" path="res://Assets/exclamation.png" id="2_4y7nx"]
[ext_resource type="PackedScene" uid="uid://cblmp7va6vok7" path="res://Scenes/health_component.tscn" id="3_5ll2p"]
[ext_resource type="PackedScene" uid="uid://ckvsnfn885361" path="res://Scenes/hurt_box_component.tscn" id="4_1ontr"]
[ext_resource type="PackedScene" uid="uid://pd81rn3yuvqq" path="res://Scenes/hit_box_component.tscn" id="5_x83rm"]
[ext_resource type="AudioStream" uid="uid://ckfji4j36dqfs" path="res://Assets/Sounds/footstep.wav" id="6_4y1bg"]
[ext_resource type="AudioStream" uid="uid://b1s5v5go0dl0y" path="res://Assets/Sounds/surprised.wav" id="7_0ojdd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pojn2"]
size = Vector3(1, 2, 1)

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_57ks5"]
points = PackedVector3Array(1, 1, -1, 9, 2, -6, 9, 2, 6, 1, 1, 1, 1, -1, -1, 9, -2, 6, 9, -2, -6, 1, -1, 1)

[sub_resource type="QuadMesh" id="QuadMesh_2j4j1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d04hk"]
transparency = 1
albedo_texture = ExtResource("2_4y7nx")
emission_enabled = true
emission = Color(0.831373, 0.447059, 0.498039, 1)
emission_operator = 1
emission_texture = ExtResource("2_4y7nx")
billboard_mode = 1

[node name="Enemy" type="CharacterBody3D" groups=["enemies"]]
collision_layer = 2
collision_mask = 36
script = ExtResource("1_1fo1j")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_pojn2")

[node name="SightPivot" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0)

[node name="PlayerDetector" type="Area3D" parent="SightPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="SightPivot/PlayerDetector"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.47505, 0, -1.77636e-15)
shape = SubResource("ConvexPolygonShape3D_57ks5")

[node name="Exclamation" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.48788, 0)
visible = false
mesh = SubResource("QuadMesh_2j4j1")
surface_material_override/0 = SubResource("StandardMaterial3D_d04hk")

[node name="SlugAttachPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.22127, 0)

[node name="HealthComponent" parent="." instance=ExtResource("3_5ll2p")]

[node name="HurtBoxComponent" parent="." instance=ExtResource("4_1ontr")]
team = 2

[node name="HitBoxComponent" parent="." instance=ExtResource("5_x83rm")]

[node name="Footsteps" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_4y1bg")
volume_db = -11.0

[node name="Surprised" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("7_0ojdd")
volume_db = -1.0
unit_size = 15.0

[connection signal="body_entered" from="SightPivot/PlayerDetector" to="." method="_on_player_detector_body_entered"]
[connection signal="body_exited" from="SightPivot/PlayerDetector" to="." method="_on_player_detector_body_exited"]
